--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -106,12 +106,12 @@
 
       let characterY = 50; // Initial Y position
       let characterX = 50; // Initial X position
-      let isJumping = false; // Flag to control jumping
       const gravity = 8; // Gravity value
       const jumpForce = 10; // Jump force value
 
       wait(4)
-      
+       let isJumping = false; // Flag to control jumping
+            const jumpForce = 10; // Jump force value
       document.addEventListener('keydown', (event) => {
         if (event.code === 'ArrowLeft') {
           characterX -= 5; // Move left
