--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -107,10 +107,10 @@
       let characterY = 50; // Initial Y position
       let characterX = 50; // Initial X position
       let isJumping = false; // Flag to control jumping
-      const gravity = 8; // Gravity value
+      const gravity = 0.5; // Gravity value
       const jumpForce = 10; // Jump force value
 
-      const fallInterval = setInterval(() => {
+            const fallInterval = setInterval(() => {
         characterY += gravity; // Apply gravity to Y position
         character.style.top = `${characterY}px`; // Update character's top position
 
@@ -122,35 +122,41 @@
           characterY = contentHeight - characterHeight; // Prevent falling through the floor
           character.style.top = `${characterY}px`;
           clearInterval(fallInterval); // Stop falling when hitting the bottom
-        }, 20);
-      
-      wait(4)
-      document.addEventListener('keydown', (event) => {
-        if (event.code === 'ArrowLeft') {
-          characterX -= 5; // Move left
-        } else if (event.code === 'ArrowRight') {
-          characterX += 5; // Move right
-        } else if (event.code === 'Space' && !isJumping) {
-          isJumping = true; // Set jumping flag to true
-          let jumpStep = 0;
-
-          const jumpInterval = setInterval(() => {
-            jumpStep += jumpForce - gravity; // Calculate jump force
-            characterY -= jumpStep; // Apply jump force
-            character.style.top = `${characterY}px`; // Update character's top position
-
-            if (characterY >= 50) {
-              characterY = 50; // Reset Y position when landed
-              character.style.top = `${characterY}px`;
-              isJumping = false; // Reset jumping flag
-              clearInterval(jumpInterval); // Stop jumping when landed
-            }
-          }, 20);
         }
+      
+      // Enable controls after 4 seconds
+      setTimeout(() => {
+        let enableControls = true; // Flag to enable controls
 
-        // Update character's position
-        character.style.left = `${characterX}px`;
-      });
+        document.addEventListener('keydown', (event) => {
+          if (enableControls) {
+            if (event.code === 'ArrowLeft') {
+              characterX -= 5; // Move left
+            } else if (event.code === 'ArrowRight') {
+              characterX += 5; // Move right
+            } else if (event.code === 'Space' && !isJumping) {
+              isJumping = true; // Set jumping flag to true
+              let jumpStep = 0;
+
+              const jumpInterval = setInterval(() => {
+                jumpStep += jumpForce - gravity; // Calculate jump force
+                characterY -= jumpStep; // Apply jump force
+                character.style.top = `${characterY}px`; // Update character's top position
+
+                if (characterY >= 50) {
+                  characterY = 50; // Reset Y position when landed
+                  character.style.top = `${characterY}px`;
+                  isJumping = false; // Reset jumping flag
+                  clearInterval(jumpInterval); // Stop jumping when landed
+                }
+              }, 20);
+            }
+
+            // Update character's position
+            character.style.left = `${characterX}px`;
+          }
+        });
+      }, 4000); // Wait for 4 seconds before enabling controls
     }
   </script>
 </body>
