--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -5,10 +5,10 @@
   <title>Level Maker with Toolbox</title>
   <style>
 
-   .character {
+    .character {
       position: absolute;
       left: 50px; /* Set initial X position */
-      top: 50px; /* Set initial Y position */
+      top: -20px; /* Set initial Y position to -20 */
       width: 50px;
       height: 50px;
       background-color: red;
