--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -107,8 +107,8 @@
       let characterY = 850; // Initial Y position
       let characterX = 50; // Initial X position
       let isJumping = false; // Flag to control jumping
-      const gravity = 8; // Gravity value
-      const jumpForce = 0.1; // Jump force value
+      const gravity = 1.5; // Gravity value
+      const jumpForce = 15; // Jump force value
 
       // Apply gravity immediately after spawning
       const gravityInterval = setInterval(() => {
@@ -131,15 +131,13 @@
               characterX += 5; // Move right
             } else if (event.code === 'Space' && !isJumping) {
               isJumping = true; // Set jumping flag to true
-              let jumpStep = 0;
 
               const jumpInterval = setInterval(() => {
-                jumpStep += jumpForce - gravity; // Calculate jump force
-                characterY -= jumpStep; // Apply jump force
+                characterY -= jumpForce; // Apply jump force
                 character.style.top = `${characterY}px`; // Update character's top position
 
-                if (characterY >= 50) {
-                  characterY = 50; // Reset Y position when landed
+                if (characterY >= 850) {
+                  characterY = 850; // Reset Y position when landed
                   character.style.top = `${characterY}px`;
                   isJumping = false; // Reset jumping flag
                   clearInterval(jumpInterval); // Stop jumping when landed
