--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -100,8 +100,11 @@
     }
 
   function spawnCharacter() {
-    // ... (Previous character spawn logic remains unchanged) ...
 
+      const character = document.createElement('div');
+      character.classList.add('character'); // Add character class for styling
+      document.querySelector('.main-content').appendChild(character);
+    
     let characterY = 850; // Initial Y position
     let characterX = 50; // Initial X position
     let isJumping = false; // Flag to control jumping
