--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -68,17 +68,33 @@
   </div>
 
   <script>
+    function placeSelectedItem(event) {
+      if (selectedTool) {
+        const newItem = selectedTool.cloneNode(); // Create a new item using the selected tool icon
+        newItem.style.position = 'absolute'; // Set position absolute for precise placement
+
+        // Position the item 130 pixels to the left and 30 pixels above the mouse pointer's position
+        newItem.style.left = `${event.clientX - 130}px`; // Adjusted horizontal position
+        newItem.style.top = `${event.clientY - 30}px`; // Adjusted vertical position
+        newItem.style.width = '50px'; // Set the width of the placed object
+        newItem.style.height = '50px'; // Set the height of the placed object
+
+        document.querySelector('.main-content').appendChild(newItem); // Append the new item to the main content
+      }
+    }
+
     function spawnCharacter() {
       const character = document.createElement('div');
-      character.classList.add('character');
+      character.classList.add('character'); // Add character class for styling
       document.querySelector('.main-content').appendChild(character);
 
-      let characterY = 860; // Initial Y position
+      let characterY = 860; // Initial Y position set to 860
       let characterX = 50; // Initial X position
       let isJumping = false; // Flag to control jumping
-      const gravity = 1; // Gravity value
-      const jumpForce = -20; // Jump force value
+      const gravity = 8; // Gravity force value
+      const jumpForce = 10; // Jump force value
 
+      // Apply gravity
       const gravityInterval = setInterval(() => {
         if (characterY < 860) {
           characterY += gravity; // Apply gravity
@@ -86,39 +102,40 @@
         }
       }, 20);
 
+      // Enable controls after 4 seconds
       setTimeout(() => {
-        clearInterval(gravityInterval);
+        clearInterval(gravityInterval); // Stop gravity after 4 seconds
+        let enableControls = true; // Flag to enable controls
 
         document.addEventListener('keydown', (event) => {
-          if (event.code === 'Space' && !isJumping) {
-            isJumping = true;
+          if (enableControls) {
+            if (event.code === 'ArrowLeft') {
+              characterX -= 5; // Move left
+            } else if (event.code === 'ArrowRight') {
+              characterX += 5; // Move right
+            } else if (event.code === 'Space' && !isJumping) {
+              isJumping = true; // Set jumping flag to true
+              let jumpStep = 0;
 
-            let jumpStep = 0;
-            const jumpInterval = setInterval(() => {
-              jumpStep += gravity - jumpForce; // Calculate jump force
-              characterY -= jumpStep; // Apply jump force
-              character.style.top = `${characterY}px`; // Update character's top position
+              const jumpInterval = setInterval(() => {
+                jumpStep += jumpForce - gravity; // Calculate jump force
+                characterY -= jumpStep; // Apply jump force
+                character.style.top = `${characterY}px`; // Update character's top position
 
-              if (characterY >= 860) {
-                characterY = 860; // Reset Y position when landed
-                character.style.top = `${characterY}px`;
-                clearInterval(jumpInterval); // Stop jumping after landing
-                isJumping = false;
+                if (characterY >= 860) {
+                  characterY = 860; // Reset Y position when landed
+                  character.style.top = `${characterY}px`;
+                  isJumping = false; // Reset jumping flag
+                  clearInterval(jumpInterval); // Stop jumping when landed
+                }
+              }, 20);
+            }
 
-                // Start character's descent
-                const descentInterval = setInterval(() => {
-                  if (characterY < 860) {
-                    characterY += gravity; // Apply gravity for descent
-                    character.style.top = `${characterY}px`; // Update character's top position
-                  } else {
-                    clearInterval(descentInterval);
-                  }
-                }, 20);
-              }
-            }, 20);
+            // Update character's position
+            character.style.left = `${characterX}px`;
           }
         });
-      }, 4000);
+      }, 1); // Wait for 4 seconds before enabling controls
     }
   </script>
 </body>
