--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -101,7 +101,7 @@
     let characterY = 860; // Default Y position
     let isJumping = false; // Flag to control jumping
     const gravityForce = 8; // Gravity value
-    const jumpForce = -3; // Jump force
+    const jumpForce = -15; // Jump force
 
     function spawnCharacter() {
       const character = document.createElement('div');
@@ -138,19 +138,22 @@
         }
       });
 
-      function jump() {
-        let jumpInterval = setInterval(() => {
-          const characterTop = parseInt(character.style.top) || 0;
+    function jump() {
+      let jumpInterval = setInterval(() => {
+        const characterTop = parseInt(character.style.top) || 0;
 
-          if (characterTop <= 0) {
-            isJumping = false;
-            clearInterval(jumpInterval);
-          } else {
-            characterY += jumpForce;
-            character.style.top = `${characterY}px`;
-          }
-        }, 20);
-      }
+        if (characterTop <= 0) {
+          isJumping = false;
+          clearInterval(jumpInterval);
+        } else if (characterY + characterHeight >= contentHeight) {
+          // Apply gravity if the character is at the top
+          characterY += gravityForce;
+          character.style.top = `${characterY}px`;
+        } else {
+          characterY += jumpForce;
+          character.style.top = `${characterY}px`;
+        }
+      }, 20);
     }
   </script>
 </body>
