--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -134,13 +134,13 @@
           character.style.left = `${characterX - 10}px`;
         } else if (event.code === 'Space' && !isJumping) {
           isJumping = true;
-          wait(1)
-          isJumping = false;
           jump();
         }
       });
 
       function jump() {
+        setTimeout(1)
+        isJumping = false;
         let jumpInterval = setInterval(() => {
           const characterTop = parseInt(character.style.top) || 0;
 
