--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -125,23 +125,6 @@
         }
       }, 20);
 
-      let canJump = true; // Flag to control jumping
-      
-      function jump() {
-        let jumpInterval = setInterval(() => {
-          const characterTop = parseInt(character.style.top) || 0;
-
-          if (characterTop <= 0 || !canJump) {
-            isJumping = false;
-            canJump = true; // Reset canJump flag
-            clearInterval(jumpInterval);
-          } else {
-            characterY += jumpForce;
-            character.style.top = `${characterY}px`;
-          }
-        }, 20);
-      }
-
       document.addEventListener('keydown', function(event) {
         if (event.code === 'ArrowRight') {
           const characterX = parseInt(character.style.left) || 0;
@@ -149,13 +132,30 @@
         } else if (event.code === 'ArrowLeft') {
           const characterX = parseInt(character.style.left) || 0;
           character.style.left = `${characterX - 10}px`;
-        } else if (event.code === 'Space' && !isJumping && canJump) {
+        } else if (event.code === 'Space' && !isJumping) {
           isJumping = true;
-          canJump = false; // Set canJump flag to prevent multiple jumps
           jump();
         }
       });
-    }
+
+function jump() {
+  if (!isJumping) {
+    isJumping = true;
+
+    let jumpInterval = setInterval(() => {
+      const characterTop = parseInt(character.style.top) || 0;
+
+      if (characterTop <= 0) {
+        isJumping = false;
+        clearInterval(jumpInterval);
+      } else {
+        characterY += jumpForce;
+        character.style.top = `${characterY}px`;
+      }
+    }, 20);
+  }
+}
+
   </script>
 </body>
 </html>
