--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -103,6 +103,9 @@
     const gravityForce = 8; // Gravity value
     const jumpForce = -15; // Jump force
 
+    let isCharacterOnGround = true; // Flag to check if the character is on the ground
+
+    
     function spawnCharacter() {
       const character = document.createElement('div');
       character.classList.add('character'); // Add character class for styling
@@ -125,33 +128,30 @@
         }
       }, 20);
 
-      document.addEventListener('keydown', function(event) {
-        if (event.code === 'ArrowRight') {
-          const characterX = parseInt(character.style.left) || 0;
-          character.style.left = `${characterX + 10}px`;
-        } else if (event.code === 'ArrowLeft') {
-          const characterX = parseInt(character.style.left) || 0;
-          character.style.left = `${characterX - 10}px`;
-        } else if (event.code === 'Space' && !isJumping) {
-          isJumping = true;
-          jump();
-        }
-      });
-
-      function jump() {
-        let jumpInterval = setInterval(() => {
-          const characterTop = parseInt(character.style.top) || 0;
-
-          if (characterTop <= 0) {
-            isJumping = false;
-            clearInterval(jumpInterval);
-          } else {
-            characterY += jumpForce;
-            character.style.top = `${characterY}px`;
-          }
-        }, 20);
+    document.addEventListener('keydown', function(event) {
+      if (event.code === 'ArrowRight') {
+        // Existing right movement code remains unchanged
+      } else if (event.code === 'ArrowLeft') {
+        // Existing left movement code remains unchanged
+      } else if (event.code === 'Space' && isCharacterOnGround) {
+        jump();
       }
+    });
+
+    function jump() {
+      let jumpInterval = setInterval(() => {
+        const characterTop = parseInt(character.style.top) || 0;
+
+        if (characterTop <= 0) {
+          isCharacterOnGround = false; // Character is in the air
+          clearInterval(jumpInterval);
+        } else {
+          characterY += jumpForce;
+          character.style.top = `${characterY}px`;
+        }
+      }, 20);
     }
+  }
   </script>
 </body>
 </html>
