--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -98,16 +98,16 @@
       }
     }
 
+    let characterY = 860; // Default Y position
+    let isJumping = false; // Flag to control jumping
+    const gravityForce = 8; // Gravity value
+    const jumpForce = -10; // Lower jump force
+
     function spawnCharacter() {
       const character = document.createElement('div');
       character.classList.add('character'); // Add character class for styling
       document.querySelector('.main-content').appendChild(character);
 
-        let characterY = 860; // Default Y position
-        let isJumping = false; // Flag to control jumping
-        const gravityForce = 8; // Gravity value
-        const jumpForce = -15; // Jump force
-      
       setInterval(() => {
         // Apply gravity to Y position
         if (!isJumping) {
@@ -132,7 +132,7 @@
         } else if (event.code === 'ArrowLeft') {
           const characterX = parseInt(character.style.left) || 0;
           character.style.left = `${characterX - 10}px`;
-        } else if (event.code === 'Space' && !isJumping) {
+        } else if (event.code === 'Space' && !isJumping && characterY + character.clientHeight >= 0) {
           isJumping = true;
           jump();
         }
@@ -142,7 +142,7 @@
         let jumpInterval = setInterval(() => {
           const characterTop = parseInt(character.style.top) || 0;
 
-          if (characterTop <= 0) {
+          if (characterTop >= characterY) {
             isJumping = false;
             clearInterval(jumpInterval);
           } else {
