--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -142,7 +142,8 @@
         let jumpInterval = setInterval(() => {
           const characterTop = parseInt(char.style.top) || 0;
 
-          if (characterTop <= characterY - 200) {
+          if (characterTop <= characterY - 200) { // Adjust the height at which the character stops jumping
+            isJumping = false;
             clearInterval(jumpInterval);
           } else {
             characterY += jumpForce;
