--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -102,6 +102,7 @@
     let isJumping = false; // Flag to control jumping
     const gravityForce = 8; // Gravity value
     const jumpForce = -10; // Lower jump force
+    const maxJumpHeight = 300; // Maximum jump height
 
     function spawnCharacter() {
       const character = document.createElement('div');
@@ -142,7 +143,7 @@
         let jumpInterval = setInterval(() => {
           const characterTop = parseInt(char.style.top) || 0;
 
-          if (characterTop <= characterY - 200) { // Adjust the height at which the character stops jumping
+          if (characterTop <= characterY - maxJumpHeight) {
             isJumping = false;
             clearInterval(jumpInterval);
           } else {
