--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -138,19 +138,18 @@
         }
       });
 
-      function jump() {
-        let jumpInterval = setInterval(() => {
-          const characterTop = parseInt(character.style.top) || 0;
+    function jump() {
+      let jumpInterval = setInterval(() => {
+        const characterTop = parseInt(character.style.top) || 0;
 
-          if (characterTop <= 0) {
-            isJumping = false;
-            clearInterval(jumpInterval);
-          } else {
-            characterY += jumpForce;
-            character.style.top = `${characterY}px`;
-          }
-        }, 20);
-      }
+        if (characterTop <= 0) {
+          isJumping = false;
+          clearInterval(jumpInterval);
+        } else {
+          characterY -= 10; // Move character upwards by reducing its Y position
+          character.style.top = `${characterY}px`;
+        }
+      }, 20);
     }
   </script>
 </body>
